--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="res/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="res/js/posts.js"></script>
+    <script type="text/javascript" src="res/js/dropdown.js"></script>
     <title>postIt! Just Post It</title>
   </head>
   <body>
@@ -18,7 +19,14 @@
           <input type="text" name="search"><button type="button">Search</button>
         </div>
         <div class="avatar-container">
-          <img src="res/images/avatar.png" class="avatar" alt="Me">
+          <!-- <img src="getAvatar()" class="avatar" onclick="dropdown()">
+          <div id="avatar-dropdown" class="dropdown-content">
+            <a text="getName()"></a>
+            <a>Email</a>
+
+            <a href="browse.html">Browse</a>
+            <a href="login.html">Log out</a>
+          </div> -->
         </div>
       </nav>
     </header>
